syntax = "proto3";
package naruto0913.cosmosauction.cosmosauction;

import "gogoproto/gogo.proto";
import "cosmosauction/cosmosauction/params.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/naruto0913/cosmos-auction/x/cosmosauction/types";

// GenesisState defines the cosmosauction module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
